This is the link of my website: https://ishraqajeel.github.io/Ishraq-Ajeel-Website/

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ loading                    </div>
                     <h4 class="pt-2 m-0 text-white">Email</h4>
                    </div>
                     <div class="col-6 d-flex justify-content-end align-items-center">
-                      <a class="bi bi-envelope-fill fa-2x text-white" style="font-size:50px" href="mailto:ishraq.ajeel@gmail.com"></i></a>
+                      <a class="bi bi-envelope-fill fa-2x text-white" style="font-size:50px" href="mailto:ishraq.ajeel@gmail.com"></a>
                     </div> 
                   </div>   
 
