--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <button class="btn btn-info">Get Started</button>
                 </div>
 
-                <img class="d-none d-sm-block img-fluid w-50" src="./img/new.jpeg" alt="">
+                <img class="d-none d-sm-block img-fluid w-50" src="./img/new.jpg" alt="">
             </div>
         </div>
     </section>
