--- a/index.html
+++ b/index.html
@@ -270,8 +270,12 @@ loading                    </div>
                    <div class="col-6 d-flex justify-content-start">
                     <h4 class="pt-2 m-0 text-white">Instagram</h4>
                    </div>
-                    <div class="col-6 d-flex justify-content-end alignm-items-center">
-                       <a href=            class="bi bi-instagram"></a>
+                   
+
+                       <div class="col-6 d-flex justify-content-end align-items-center">
+                            <a href="https://www.instagram.com/accounts/login/?next=/iq_arti/" class="bi bi-instagram fa-2x text-white" style="font-size:50px"></a> 
+
+                       <i class="bi bi-instagram"></i>
                       
                     </div> 
                   </div>   
